# LogixDesigner-MCP

./: README.md  pyproject.toml
deploy/: README.md  cloudflared-config.yml  discover_com.py  find_sdk.py  hermes-config.yaml  install.bat
proto/: logix_sdk.proto  logix_sdk_v2.proto  logix_sdk_v3.proto
src/logix_mcp/: __init__.py  auth.py  grpc_client.py  models.py  sdk_interop.py  sdk_interop_grpc.py  sdk_interop_hybrid.py  sdk_interop_mock.py  sdk_interop_real.py  server.py
src/plc_parser/: __init__.py  l5k.py  l5k_v2.py  l5k_v3.py
tests/: conftest.py  test_models.py  test_server.py  test_tools.py
tools/: acd_analyze.py  acd_map.py  acd_sections.py  acd_tags.py  auth_daemon.py  capture_live_auth.py  capture_open.py  debug_frames.py  decode_jwt.py  decode_open.py  decode_open2.py  discover_open.py  discover_open2.py  discover_open3.py  dump_payloads.py  extract_token.py  hunt_offset.py  logix_grpc_mcp.py  refresh_token.py  test_exact_auth.py  test_fresh_auth.py  test_full_flow.py  test_l5k_parser.py  test_open_correct.py  test_open_grpc.py  test_raw_open.py  test_scan.py  test_sdk_grpc.py  test_wrapped_auth.py  token_server.py
