[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logix-mcp"
version = "0.1.0"
description = "MCP server exposing Studio 5000 Logix Designer SDK as typed tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]
windows = ["pythonnet>=3.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/logix_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
